# DroneSwarm

./: .gitignore  README.md  branch_protection_test.txt  force_push_test.txt  protection_test_2.txt
.Trash-1000/info/: build.trashinfo  devel.trashinfo
Hardware/CDA/: ~$零件1.SLDPRT  机身.3mf  零件1.SLDPRT
Hardware/PCB/: New Project.eprj
Software/Hive_control_ROS/devel/: .catkin  setup.fish
Software/Hive_control_ROS/devel/lib/pkgconfig/: swarm_data_processor.pc  swarm_monitor.pc  swarm_planner.pc  udp_ros_bridge.pc
Software/Hive_control_ROS/devel/share/swarm_data_processor/cmake/: swarm_data_processorConfig.cmake
Software/Hive_control_ROS/devel/share/swarm_monitor/cmake/: swarm_monitorConfig.cmake
Software/Hive_control_ROS/devel/share/swarm_planner/cmake/: swarm_plannerConfig.cmake
Software/Hive_control_ROS/devel/share/udp_ros_bridge/cmake/: udp_ros_bridgeConfig.cmake
Software/Hive_control_ROS/src/gazebo_simulator/: CMakeLists.txt  package.xml
Software/Hive_control_ROS/src/gazebo_simulator/src/: main.cpp
Software/Hive_control_ROS/src/language/: CMakeLists.txt  package.xml
Software/Hive_control_ROS/src/mic/launch/: tts_make.launch
Software/Hive_control_ROS/src/mic/src/angle_wakeup/: mic.cpp
Software/Hive_control_ROS/src/mic/src/tts/: tts_init.cpp
Software/Hive_control_ROS/src/swarm_data_processor/: CMakeLists.txt
Software/Hive_control_ROS/src/swarm_data_processor/src/: main.cpp
Software/Hive_control_ROS/src/swarm_data_processor/src/data_processing/: data_processing.cpp  data_processing.h
Software/Hive_control_ROS/src/swarm_gui_monitor/: CMakeLists.txt  package.xml
Software/Hive_control_ROS/src/swarm_gui_monitor/src/: main.cpp
Software/Hive_control_ROS/src/swarm_monitor/: CMakeLists.txt  package.xml
Software/Hive_control_ROS/src/swarm_planner/: CMakeLists.txt  package.xml
Software/Hive_control_ROS/src/swarm_planner/src/: main.cpp
Software/Hive_control_ROS/src/udp_ros_bridge/: CMakeLists.txt  package.xml
Software/Hive_control_ROS/src/udp_ros_bridge/launch/: udp_ros_bridge.launch
Software/Hive_control_ROS/src/udp_ros_bridge/msg/: swarm.msg
Software/Hive_control_ROS/src/udp_ros_bridge/src/: main.cpp  main.h
Software/Hive_control_ROS/src/udp_ros_bridge/src/SwarmRegistry/: SwarmRegistry.cpp  SwarmRegistry.h
Software/Hive_control_ROS/src/udp_ros_bridge/src/UDP/: UDP.cpp  UDP.h
Software/Hive_control_ROS/src/udp_ros_bridge/src/data_processing/: data_processing.cpp  data_processing.h
Software/Hive_control_ROS/src/xinhuo/scripts/: MyWebSocket.py  SparkPy.py  Sparktext.py
Software/Hive_control_ROS/环境/: robot.sh  test_vosk.py
Software/UAV_ESP/: CMakeLists.txt  README.md
Software/UAV_ESP/Hardware/IIC/: IIC.cpp  IIC.h
Software/UAV_ESP/Hardware/MPU6050/: MPU6050.cpp  MPU6050.h  MPU6050_6Axis_MotionApps20.h  MPU6050_Reg.h
Software/UAV_ESP/Hardware/OLED/: OLED.cpp  OLED.h
Software/UAV_ESP/Hardware/PWM/: PWM.cpp  PWM.h
Software/UAV_ESP/Hardware/TIME/: TIME.cpp  TIME.h
Software/UAV_ESP/Hardware/UDP/: UDP.cpp  UDP.h
Software/UAV_ESP/Hardware/WIFI/: WIFI.cpp  WIFI.h
Software/UAV_ESP/Hardware/bluetooth/: bluetooth.h
Software/UAV_ESP/System/PID/: PID.cpp  PID.h
Software/UAV_ESP/System/delay/: delay.cpp  esp32_compatibility.md
Software/UAV_ESP/System/sys/: sys.cpp  sys.h
Software/UAV_ESP/main/: CMakeLists.txt  main.cpp  main.h
Software/UAV_ESP/test/: debug_network.md
docs/: 技术路线规划.md
test/: kalman_filter_test.cpp
